# ros_book_sample_code

./: README.md
chapter10/: CMakeLists.txt  package.xml
chapter10/src/: patrol.py
chapter11/: CMakeLists.txt  package.xml
chapter11/scripts/: r2.bash  spawn_chessboard.py
chapter11/src/: r2_chess_pgn.py  r2_chessboard_cli.py  r2_cli.py  r2_hand.py  r2_mime.py
chapter12/: CMakeLists.txt  package.xml
chapter12/launch/: course.launch
chapter12/scripts/: launch_with_model_path
chapter12/src/: follower_color_filter.py  follower_line_finder.py  follower_opencv.py  follower_p.py
chapter13/: CMakeLists.txt  package.xml
chapter13/src/: better_patrol_fsm.py  patrol.py  patrol_fsm.py  shapes.py  shapes2.py  simple_fsm.py
chapter14/: CMakeLists.txt  package.xml
chapter14/launch/: markers.launch  nav.launch  stockroom.launch
chapter14/maps/: map.pgm  map.yaml
chapter14/scripts/: deliver_to_counter.py  go_to_bin.py  initial_localization.py  look_at_bin.py  pick_up_item.py  set_gazebo_resource_path  stock_products.py
chapter14/worlds/: stockroom.world  stockroom.world.em
chapter15/: CMakeLists.txt  package.xml
chapter15/src/: actuator.py  fake_actuator.py  fake_sensor.py  service_sensor.py  topic_sensor.py  topic_sensor2.py  topic_sensor3.py
chapter15/srv/: FakeSensor.srv
chapter16/: CMakeLists.txt  package.xml
chapter16/launch/: after_example_16_10.launch  after_example_16_8.launch
chapter16/urdf/: example_16_1.urdf  example_16_10.urdf  example_16_2.urdf  example_16_3.urdf  example_16_4.urdf  example_16_5.urdf  example_16_6.urdf  example_16_7.urdf  example_16_8.urdf
chapter17/: CMakeLists.txt  package.xml
chapter17/config/: costmap_common_params.yaml
chapter17/launch/: after_example_17_1.launch  after_example_17_2.launch  after_example_17_3.launch  tortoisebot.launch
chapter17/params/: global_costmap_params.yaml  local_costmap_params.yaml
chapter17/urdf/: example_17_1.urdf  example_17_2.urdf  example_17_3.urdf  tortoisebot.urdf
chapter18/: CMakeLists.txt  package.xml
chapter18/launch/: after_example_18_15.launch  after_example_18_16.launch  all.launch  cougarbot.launch  example_18_11.launch
chapter18/moveit_examples/config/: controller.yaml
chapter18/urdf/: cougarbot.urdf  example_18_1.urdf  example_18_10.urdf  example_18_12.urdf  example_18_13.urdf  example_18_14.urdf  example_18_16.urdf  example_18_2.urdf  example_18_3.urdf  example_18_4.urdf  example_18_5.urdf  example_18_6.urdf  example_18_7.urdf  example_18_8.urdf  example_18_9.urdf
chapter19/: CMakeLists.txt  package.xml
chapter19/scripts/: pyttsx_example.py
chapter19/src/: pyttsx_client.py  pyttsx_server.py
chapter20/: CMakeLists.txt  package.xml
chapter20/launch/: listener.launch  listener_add_two_ints_server.launch  talker_listener.launch  talker_listener_param.launch  talker_listener_param_include.launch  talker_listener_remap.launch  talker_listener_screen.launch  talker_listener_test.launch
chapter20/src/: test_talker.py
chapter21/: CMakeLists.txt  package.xml
chapter21/src/: cosine_wave.py  sine_wave.py
chapter23/: CMakeLists.txt  package.xml
chapter23/src/: minimal.cpp  service_client.cpp  service_server.cpp  topic_publisher.cpp  topic_subscriber.cpp
chapter3/: CMakeLists.txt  package.xml
chapter3/src/: doubler.py  message_publisher.py  message_subscriber.py  topic_publisher.py  topic_subscriber.py
chapter4/: CMakeLists.txt  package.xml
chapter4/src/: service_client.py  service_server.py
chapter5/: CMakeLists.txt  package.xml
chapter5/src/: fancy_action_client.py  fancy_action_server.py  simple_action_client.py  simple_action_server.py
chapter7/: CMakeLists.txt  package.xml
chapter7/src/: range_ahead.py  red_light_green_light.py  wander.py
chapter8/: CMakeLists.txt  package.xml
chapter8/src/: key_publisher.py  key_to_twist.py  key_to_twist_parameterized.py  key_to_twist_using_rate.py  key_to_twist_with_ramps.py
chapter9/: CMakeLists.txt  package.xml
chapter9/maps/: map.yaml
